// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SettingsShiftsEdit > renders correctly - adding new 1`] = `
<div
  class="bg-quaternary-dark fill-height full-width"
  data-v-4db4f123=""
>
  <v-card-stub
    border="false"
    class="mx-auto mb-10 mt-10"
    data-v-4db4f123=""
    density="default"
    disabled="false"
    exact="false"
    flat="false"
    hover="false"
    loading="false"
    maxwidth="900"
    replace="false"
    ripple="true"
    tag="div"
    tile="false"
    variant="elevated"
  >
    <!--v-if-->
    
    
    <v-card-title-stub
      class="justify-center d-flex white-space-wrap text-center"
      data-v-4db4f123=""
      id="primary-title"
      tag="div"
    >
      New: Shift
    </v-card-title-stub>
    <!--v-if-->
    <div
      class="px-3"
      data-v-4db4f123=""
    >
      
      <v-form-stub
        disabled="false"
        fastfail="false"
        modelvalue="true"
        validateon="input"
      >
        <v-row-stub
          dense="false"
          density="default"
          nogutters="false"
          tag="div"
        >
          <v-col-stub
            class="px-1 mb-2"
            cols="12"
            lg="false"
            md="6"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <evocon-v-input-stub
              autofocus=""
              counter="200"
              filled="true"
              grow="false"
              hint="Shift name"
              id="name-input"
              maxlength="200"
              modelmodifiers="[object Object]"
              modelvalue=""
              persistent-hint=""
              placeholder="Shift name"
              required=""
              rules="(v) => !!v || $setup.t('Shift name')"
              truncateinput="false"
              type="text"
              usechip="false"
              validate-on="blur"
              variant="filled"
            />
          </v-col-stub>
          <v-col-stub
            class="px-1 mb-2"
            cols="12"
            lg="false"
            md="6"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <color-selection-input-stub
              disabled="false"
              hint="Shift color"
              modelvalue=""
              removedcolors="[object Set]"
            />
          </v-col-stub>
          <v-col-stub
            class="px-1 mb-2"
            cols="12"
            lg="false"
            md="6"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <selection-input-stub
              checkbox="true"
              coloractiveprepend="false"
              disabled="false"
              disabledvalues=""
              emittoggleall="false"
              emptyequalsallselected="false"
              error="false"
              filled="true"
              groupidkey="id"
              groups=""
              groupsorderby="name"
              hiddenitemscount="0"
              hidesearch="false"
              hint="Factory"
              inverted="false"
              isgroupedselect="false"
              issingleselect="true"
              itemflag=""
              itemgroupidkey="groupId"
              items="[object Object],[object Object]"
              itemsecondarytext=""
              itemtertiarytext=""
              itemtext="name"
              itemvalue="id"
              loading="false"
              menuinputtype="primary"
              modelvalue=""
              numericorderby="false"
              placeholder="Factory"
              prependtext=""
              removenonexistentselections="false"
              required="true"
              showemptyarrayasallselected="false"
              someselected="false"
              totalcount="0"
              usechips="false"
            />
          </v-col-stub>
          <v-col-stub
            class="px-1 mb-2"
            cols="12"
            id="station-select-column"
            lg="false"
            md="6"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <selection-input-stub
              checkbox="true"
              coloractiveprepend="false"
              disabled="true"
              disabledvalues=""
              emittoggleall="false"
              emptyequalsallselected="false"
              error="false"
              filled="true"
              groupidkey="id"
              groups="[object Object],[object Object]"
              groupsorderby="name"
              hiddenitemscount="0"
              hidesearch="false"
              hint="Stations"
              id="station-select"
              inverted="false"
              isgroupedselect="true"
              issingleselect="false"
              itemflag=""
              itemgroupidkey="groupId"
              items=""
              itemsecondarytext=""
              itemtertiarytext=""
              itemtext="name"
              itemvalue="id"
              loading="false"
              menuinputtype="primary"
              modelvalue=""
              numericorderby="false"
              placeholder="Stations"
              prependtext=""
              removenonexistentselections="true"
              required="false"
              showemptyarrayasallselected="false"
              someselected="false"
              totalcount="0"
              usechips="false"
            />
          </v-col-stub>
        </v-row-stub>
        <v-row-stub
          class="ma-4"
          dense="false"
          density="default"
          nogutters="false"
          tag="div"
        >
          <v-col-stub
            class="text-center"
            cols="false"
            lg="false"
            md="false"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <div
              class="text-body-large font-weight-bold"
              id="days-of-week-title"
            >
              Days
            </div>
          </v-col-stub>
        </v-row-stub>
        <div
          class="mt-4 mb-4 px-1 d-flex flex-wrap"
        >
          <evocon-v-chip-stub
            active="true"
            allowgrow="false"
            class="my-1 mr-2"
            disabled="false"
            error="false"
            icon=""
            iconclass=""
            imgsrc=""
            indeterminate="false"
            label="All"
            type="primary"
          />
          
          <evocon-v-chip-stub
            active="true"
            allowgrow="false"
            class="my-1 mr-2"
            dark="false"
            disabled="false"
            error="false"
            icon=""
            iconclass=""
            imgsrc=""
            label="Mon"
            size="default"
            type="primary"
            value="MONDAY"
          />
          <evocon-v-chip-stub
            active="true"
            allowgrow="false"
            class="my-1 mr-2"
            dark="false"
            disabled="false"
            error="false"
            icon=""
            iconclass=""
            imgsrc=""
            label="Tue"
            size="default"
            type="primary"
            value="TUESDAY"
          />
          <evocon-v-chip-stub
            active="true"
            allowgrow="false"
            class="my-1 mr-2"
            dark="false"
            disabled="false"
            error="false"
            icon=""
            iconclass=""
            imgsrc=""
            label="Wed"
            size="default"
            type="primary"
            value="WEDNESDAY"
          />
          <evocon-v-chip-stub
            active="true"
            allowgrow="false"
            class="my-1 mr-2"
            dark="false"
            disabled="false"
            error="false"
            icon=""
            iconclass=""
            imgsrc=""
            label="Thu"
            size="default"
            type="primary"
            value="THURSDAY"
          />
          <evocon-v-chip-stub
            active="true"
            allowgrow="false"
            class="my-1 mr-2"
            dark="false"
            disabled="false"
            error="false"
            icon=""
            iconclass=""
            imgsrc=""
            label="Fri"
            size="default"
            type="primary"
            value="FRIDAY"
          />
          <evocon-v-chip-stub
            active="true"
            allowgrow="false"
            class="my-1 mr-2"
            dark="false"
            disabled="false"
            error="false"
            icon=""
            iconclass=""
            imgsrc=""
            label="Sat"
            size="default"
            type="primary"
            value="SATURDAY"
          />
          <evocon-v-chip-stub
            active="true"
            allowgrow="false"
            class="my-1 mr-2"
            dark="false"
            disabled="false"
            error="false"
            icon=""
            iconclass=""
            imgsrc=""
            label="Sun"
            size="default"
            type="primary"
            value="SUNDAY"
          />
          
        </div>
        <v-row-stub
          dense="false"
          density="default"
          nogutters="false"
          tag="div"
        >
          <v-col-stub
            class="px-1 mb-2"
            cols="6"
            lg="false"
            md="false"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <evocon-time-input-stub
              hint="Start time"
              id="shift-start-time"
              required=""
              rules="Start time"
              usechip="false"
              validate-on-blur=""
            />
          </v-col-stub>
          <v-col-stub
            class="px-1 mb-2"
            cols="6"
            lg="false"
            md="false"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <evocon-time-input-stub
              hint="End time"
              id="shift-end-time"
              required=""
              rules="End time"
              usechip="false"
              validate-on-blur=""
            />
          </v-col-stub>
        </v-row-stub>
      </v-form-stub>
      
    </div>
    <!--v-if-->
    <!--v-if-->
    <v-row-stub
      class="ma-4"
      data-v-4db4f123=""
      dense="false"
      density="default"
      nogutters="false"
      tag="div"
    >
      <v-col-stub
        class="text-center"
        cols="false"
        data-v-4db4f123=""
        lg="false"
        md="false"
        sm="false"
        tag="div"
        xl="false"
        xxl="false"
      >
        <div
          class="text-body-large font-weight-bold position-relative text-align-center full-width"
          data-v-4db4f123=""
          id="tertiary-title"
        >
          <span
            class="segment-title"
            data-v-4db4f123=""
          />
          <!--v-if-->
        </div>
        <div
          class="text-body-medium text-secondary-text"
          data-v-4db4f123=""
          id="tertiary-subtitle"
        />
      </v-col-stub>
    </v-row-stub>
    <div
      class="px-3"
      data-v-4db4f123=""
    >
      
      <v-expansion-panels-stub
        class="mt-4 mx-1"
        collapseicon="$collapse"
        disabled="false"
        eager="false"
        expandicon="$expand"
        flat="false"
        focusable="false"
        hideactions="false"
        mandatory="false"
        modelvalue="false"
        multiple="true"
        ripple="false"
        static="true"
        tag="div"
        tile="false"
        variant="accordion"
      >
        <expansion-panel-table-stub
          addbtndisabled="true"
          addbuttontext="No shift"
          compact="false"
          description="Set time periods when shift is not scheduled to run"
          headers="[object Object],[object Object],[object Object],[object Object],[object Object]"
          icon="M19,19H5V8H19M19,3H18V1H16V3H8V1H6V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5A2,2 0 0,0 19,3M9.31,17L11.75,14.56L14.19,17L15.25,15.94L12.81,13.5L15.25,11.06L14.19,10L11.75,12.44L9.31,10L8.25,11.06L10.69,13.5L8.25,15.94L9.31,17Z"
          items="[object Object]"
          loading="[object Object]"
          showdelete="true"
          showedit="true"
          title="'No shift' days"
        />
        <!--v-if-->
        <expansion-panel-table-stub
          addbtndisabled="false"
          addbuttontext="Auto-commenting"
          compact="false"
          description="Make downtime commenting easier for operators by adding auto-comments"
          headers="[object Object],[object Object],[object Object],[object Object]"
          icon="M5.12,14L7.5,7.67L9.87,14M6.5,5L1,19H3.25L4.37,16H10.62L11.75,19H14L8.5,5H6.5M18,17L23,11.93L21.59,10.5L19,13.1V7H17V13.1L14.41,10.5L13,11.93L18,17Z"
          items=""
          loading="false"
          showdelete="true"
          showedit="true"
          title="Downtime auto-commenting"
          warningkey="hasError"
        />
      </v-expansion-panels-stub>
      <div
        class="d-inline-flex align-center mt-6"
      >
        <multi-line-switch-stub
          disabled="false"
          helptext=""
          maintext="Template status"
          modelvalue="true"
          samelineinput="false"
        />
        <icon-with-tooltip-stub
          additionalclasses="ml-2"
          color=""
          icon="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
          iconid=""
          iconsrc=""
          size="16"
          tooltiplocation="top"
          tooltiptext="Deleting or turning off templates will not affect active shifts or historical data."
        />
      </div>
      
    </div>
    <v-card-actions-stub
      data-v-4db4f123=""
      tag="div"
    >
      
      <!--v-if-->
      <v-spacer-stub
        tag="div"
      />
      <evocon-v-button-stub
        color=""
        icon=""
        iconcolor=""
        text="Cancel"
        textclass=""
        type="secondary"
      />
      <evocon-v-button-stub
        color="primary"
        disabled="true"
        icon=""
        iconcolor=""
        id="save-btn"
        loading="false"
        text="Save"
        textclass=""
        type="primary"
      />
      
    </v-card-actions-stub>
  </v-card-stub>
</div>
`;

exports[`SettingsShiftsEdit > renders correctly - editing existing 1`] = `
<div
  class="bg-quaternary-dark fill-height full-width"
  data-v-4db4f123=""
>
  <v-card-stub
    border="false"
    class="mx-auto mb-10 mt-10"
    data-v-4db4f123=""
    density="default"
    disabled="false"
    exact="false"
    flat="false"
    hover="false"
    loading="false"
    maxwidth="900"
    replace="false"
    ripple="true"
    tag="div"
    tile="false"
    variant="elevated"
  >
    <!--v-if-->
    
    
    <v-card-title-stub
      class="justify-center d-flex white-space-wrap text-center"
      data-v-4db4f123=""
      id="primary-title"
      tag="div"
    >
      Edit: Shift
    </v-card-title-stub>
    <!--v-if-->
    <div
      class="px-3"
      data-v-4db4f123=""
    >
      
      <v-form-stub
        disabled="false"
        fastfail="false"
        modelvalue="true"
        validateon="input"
      >
        <v-row-stub
          dense="false"
          density="default"
          nogutters="false"
          tag="div"
        >
          <v-col-stub
            class="px-1 mb-2"
            cols="12"
            lg="false"
            md="6"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <evocon-v-input-stub
              autofocus=""
              counter="200"
              filled="true"
              grow="false"
              hint="Shift name"
              id="name-input"
              maxlength="200"
              modelmodifiers="[object Object]"
              modelvalue="template 2"
              persistent-hint=""
              placeholder="Shift name"
              required=""
              rules="(v) => !!v || $setup.t('Shift name')"
              truncateinput="false"
              type="text"
              usechip="false"
              validate-on="blur"
              variant="filled"
            />
          </v-col-stub>
          <v-col-stub
            class="px-1 mb-2"
            cols="12"
            lg="false"
            md="6"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <color-selection-input-stub
              disabled="false"
              hint="Shift color"
              modelvalue=""
              removedcolors="[object Set]"
            />
          </v-col-stub>
          <v-col-stub
            class="px-1 mb-2"
            cols="12"
            lg="false"
            md="6"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <selection-input-stub
              checkbox="true"
              coloractiveprepend="false"
              disabled="false"
              disabledvalues=""
              emittoggleall="false"
              emptyequalsallselected="false"
              error="false"
              filled="true"
              groupidkey="id"
              groups=""
              groupsorderby="name"
              hiddenitemscount="0"
              hidesearch="false"
              hint="Factory"
              inverted="false"
              isgroupedselect="false"
              issingleselect="true"
              itemflag=""
              itemgroupidkey="groupId"
              items="[object Object],[object Object]"
              itemsecondarytext=""
              itemtertiarytext=""
              itemtext="name"
              itemvalue="id"
              loading="false"
              menuinputtype="primary"
              modelvalue="1"
              numericorderby="false"
              placeholder="Factory"
              prependtext=""
              removenonexistentselections="false"
              required="true"
              showemptyarrayasallselected="false"
              someselected="false"
              totalcount="0"
              usechips="false"
            />
          </v-col-stub>
          <v-col-stub
            class="px-1 mb-2"
            cols="12"
            id="station-select-column"
            lg="false"
            md="6"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <selection-input-stub
              checkbox="true"
              coloractiveprepend="false"
              disabled="false"
              disabledvalues=""
              emittoggleall="false"
              emptyequalsallselected="false"
              error="false"
              filled="true"
              groupidkey="id"
              groups="[object Object],[object Object]"
              groupsorderby="name"
              hiddenitemscount="0"
              hidesearch="false"
              hint="Stations"
              id="station-select"
              inverted="false"
              isgroupedselect="true"
              issingleselect="false"
              itemflag=""
              itemgroupidkey="groupId"
              items="[object Object],[object Object],[object Object]"
              itemsecondarytext=""
              itemtertiarytext=""
              itemtext="name"
              itemvalue="id"
              loading="false"
              menuinputtype="primary"
              modelvalue="1"
              numericorderby="false"
              placeholder="Stations"
              prependtext=""
              removenonexistentselections="true"
              required="false"
              showemptyarrayasallselected="false"
              someselected="false"
              totalcount="0"
              usechips="false"
            />
          </v-col-stub>
        </v-row-stub>
        <v-row-stub
          class="ma-4"
          dense="false"
          density="default"
          nogutters="false"
          tag="div"
        >
          <v-col-stub
            class="text-center"
            cols="false"
            lg="false"
            md="false"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <div
              class="text-body-large font-weight-bold"
              id="days-of-week-title"
            >
              Days
            </div>
          </v-col-stub>
        </v-row-stub>
        <div
          class="mt-4 mb-4 px-1 d-flex flex-wrap"
        >
          <evocon-v-chip-stub
            active="false"
            allowgrow="false"
            class="my-1 mr-2"
            disabled="false"
            error="false"
            icon=""
            iconclass=""
            imgsrc=""
            indeterminate="true"
            label="All"
            type="primary"
          />
          
          <evocon-v-chip-stub
            active="true"
            allowgrow="false"
            class="my-1 mr-2"
            dark="false"
            disabled="false"
            error="false"
            icon=""
            iconclass=""
            imgsrc=""
            label="Mon"
            size="default"
            type="primary"
            value="MONDAY"
          />
          <evocon-v-chip-stub
            active="true"
            allowgrow="false"
            class="my-1 mr-2"
            dark="false"
            disabled="false"
            error="false"
            icon=""
            iconclass=""
            imgsrc=""
            label="Tue"
            size="default"
            type="primary"
            value="TUESDAY"
          />
          <evocon-v-chip-stub
            active="true"
            allowgrow="false"
            class="my-1 mr-2"
            dark="false"
            disabled="false"
            error="false"
            icon=""
            iconclass=""
            imgsrc=""
            label="Wed"
            size="default"
            type="primary"
            value="WEDNESDAY"
          />
          <evocon-v-chip-stub
            active="false"
            allowgrow="false"
            class="my-1 mr-2"
            dark="false"
            disabled="false"
            error="false"
            icon=""
            iconclass=""
            imgsrc=""
            label="Thu"
            size="default"
            type="primary"
            value="THURSDAY"
          />
          <evocon-v-chip-stub
            active="false"
            allowgrow="false"
            class="my-1 mr-2"
            dark="false"
            disabled="false"
            error="false"
            icon=""
            iconclass=""
            imgsrc=""
            label="Fri"
            size="default"
            type="primary"
            value="FRIDAY"
          />
          <evocon-v-chip-stub
            active="false"
            allowgrow="false"
            class="my-1 mr-2"
            dark="false"
            disabled="false"
            error="false"
            icon=""
            iconclass=""
            imgsrc=""
            label="Sat"
            size="default"
            type="primary"
            value="SATURDAY"
          />
          <evocon-v-chip-stub
            active="false"
            allowgrow="false"
            class="my-1 mr-2"
            dark="false"
            disabled="false"
            error="false"
            icon=""
            iconclass=""
            imgsrc=""
            label="Sun"
            size="default"
            type="primary"
            value="SUNDAY"
          />
          
        </div>
        <v-row-stub
          dense="false"
          density="default"
          nogutters="false"
          tag="div"
        >
          <v-col-stub
            class="px-1 mb-2"
            cols="6"
            lg="false"
            md="false"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <evocon-time-input-stub
              hint="Start time"
              id="shift-start-time"
              modelvalue="12:00"
              required=""
              rules="true"
              usechip="false"
              validate-on-blur=""
            />
          </v-col-stub>
          <v-col-stub
            class="px-1 mb-2"
            cols="6"
            lg="false"
            md="false"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <evocon-time-input-stub
              hint="End time"
              id="shift-end-time"
              modelvalue="17:00"
              required=""
              rules="true"
              usechip="false"
              validate-on-blur=""
            />
          </v-col-stub>
        </v-row-stub>
      </v-form-stub>
      
    </div>
    <!--v-if-->
    <!--v-if-->
    <v-row-stub
      class="ma-4"
      data-v-4db4f123=""
      dense="false"
      density="default"
      nogutters="false"
      tag="div"
    >
      <v-col-stub
        class="text-center"
        cols="false"
        data-v-4db4f123=""
        lg="false"
        md="false"
        sm="false"
        tag="div"
        xl="false"
        xxl="false"
      >
        <div
          class="text-body-large font-weight-bold position-relative text-align-center full-width"
          data-v-4db4f123=""
          id="tertiary-title"
        >
          <span
            class="segment-title"
            data-v-4db4f123=""
          />
          <!--v-if-->
        </div>
        <div
          class="text-body-medium text-secondary-text"
          data-v-4db4f123=""
          id="tertiary-subtitle"
        />
      </v-col-stub>
    </v-row-stub>
    <div
      class="px-3"
      data-v-4db4f123=""
    >
      
      <v-expansion-panels-stub
        class="mt-4 mx-1"
        collapseicon="$collapse"
        disabled="false"
        eager="false"
        expandicon="$expand"
        flat="false"
        focusable="false"
        hideactions="false"
        mandatory="false"
        modelvalue="false"
        multiple="true"
        ripple="false"
        static="true"
        tag="div"
        tile="false"
        variant="accordion"
      >
        <expansion-panel-table-stub
          addbtndisabled="false"
          addbuttontext="No shift"
          compact="false"
          description="Set time periods when shift is not scheduled to run"
          headers="[object Object],[object Object],[object Object],[object Object],[object Object]"
          icon="M19,19H5V8H19M19,3H18V1H16V3H8V1H6V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5A2,2 0 0,0 19,3M9.31,17L11.75,14.56L14.19,17L15.25,15.94L12.81,13.5L15.25,11.06L14.19,10L11.75,12.44L9.31,10L8.25,11.06L10.69,13.5L8.25,15.94L9.31,17Z"
          items="[object Object]"
          loading="[object Object]"
          showdelete="true"
          showedit="true"
          title="'No shift' days"
        />
        <!--v-if-->
        <expansion-panel-table-stub
          addbtndisabled="false"
          addbuttontext="Auto-commenting"
          compact="false"
          description="Make downtime commenting easier for operators by adding auto-comments"
          headers="[object Object],[object Object],[object Object],[object Object]"
          icon="M5.12,14L7.5,7.67L9.87,14M6.5,5L1,19H3.25L4.37,16H10.62L11.75,19H14L8.5,5H6.5M18,17L23,11.93L21.59,10.5L19,13.1V7H17V13.1L14.41,10.5L13,11.93L18,17Z"
          items=""
          loading="false"
          showdelete="true"
          showedit="true"
          title="Downtime auto-commenting"
          warningkey="hasError"
        />
      </v-expansion-panels-stub>
      <div
        class="d-inline-flex align-center mt-6"
      >
        <multi-line-switch-stub
          disabled="false"
          helptext=""
          maintext="Template status"
          modelvalue="true"
          samelineinput="false"
        />
        <icon-with-tooltip-stub
          additionalclasses="ml-2"
          color=""
          icon="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
          iconid=""
          iconsrc=""
          size="16"
          tooltiplocation="top"
          tooltiptext="Deleting or turning off templates will not affect active shifts or historical data."
        />
      </div>
      
    </div>
    <v-card-actions-stub
      data-v-4db4f123=""
      tag="div"
    >
      
      <delete-button-stub />
      <v-spacer-stub
        tag="div"
      />
      <evocon-v-button-stub
        color=""
        icon=""
        iconcolor=""
        text="Cancel"
        textclass=""
        type="secondary"
      />
      <evocon-v-button-stub
        color="primary"
        disabled="false"
        icon=""
        iconcolor=""
        id="save-btn"
        loading="false"
        text="Save"
        textclass=""
        type="primary"
      />
      
    </v-card-actions-stub>
  </v-card-stub>
</div>
`;

exports[`SettingsShiftsEdit > renders correctly - user has just one factory 1`] = `
<div
  class="bg-quaternary-dark fill-height full-width"
  data-v-4db4f123=""
>
  <v-card-stub
    border="false"
    class="mx-auto mb-10 mt-10"
    data-v-4db4f123=""
    density="default"
    disabled="false"
    exact="false"
    flat="false"
    hover="false"
    loading="false"
    maxwidth="900"
    replace="false"
    ripple="true"
    tag="div"
    tile="false"
    variant="elevated"
  >
    <!--v-if-->
    
    
    <v-card-title-stub
      class="justify-center d-flex white-space-wrap text-center"
      data-v-4db4f123=""
      id="primary-title"
      tag="div"
    >
      New: Shift
    </v-card-title-stub>
    <!--v-if-->
    <div
      class="px-3"
      data-v-4db4f123=""
    >
      
      <v-form-stub
        disabled="false"
        fastfail="false"
        modelvalue="true"
        validateon="input"
      >
        <v-row-stub
          dense="false"
          density="default"
          nogutters="false"
          tag="div"
        >
          <v-col-stub
            class="px-1 mb-2"
            cols="12"
            lg="false"
            md="6"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <evocon-v-input-stub
              autofocus=""
              counter="200"
              filled="true"
              grow="false"
              hint="Shift name"
              id="name-input"
              maxlength="200"
              modelmodifiers="[object Object]"
              modelvalue=""
              persistent-hint=""
              placeholder="Shift name"
              required=""
              rules="(v) => !!v || $setup.t('Shift name')"
              truncateinput="false"
              type="text"
              usechip="false"
              validate-on="blur"
              variant="filled"
            />
          </v-col-stub>
          <v-col-stub
            class="px-1 mb-2"
            cols="12"
            lg="false"
            md="6"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <color-selection-input-stub
              disabled="false"
              hint="Shift color"
              modelvalue=""
              removedcolors="[object Set]"
            />
          </v-col-stub>
          <!--v-if-->
          <v-col-stub
            class="px-1 mb-2"
            cols="12"
            id="station-select-column"
            lg="false"
            md="6"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <selection-input-stub
              checkbox="true"
              coloractiveprepend="false"
              disabled="false"
              disabledvalues=""
              emittoggleall="false"
              emptyequalsallselected="false"
              error="false"
              filled="true"
              groupidkey="id"
              groups="[object Object],[object Object]"
              groupsorderby="name"
              hiddenitemscount="0"
              hidesearch="false"
              hint="Stations"
              id="station-select"
              inverted="false"
              isgroupedselect="true"
              issingleselect="false"
              itemflag=""
              itemgroupidkey="groupId"
              items="[object Object],[object Object],[object Object]"
              itemsecondarytext=""
              itemtertiarytext=""
              itemtext="name"
              itemvalue="id"
              loading="false"
              menuinputtype="primary"
              modelvalue=""
              numericorderby="false"
              placeholder="Stations"
              prependtext=""
              removenonexistentselections="true"
              required="false"
              showemptyarrayasallselected="false"
              someselected="false"
              totalcount="0"
              usechips="false"
            />
          </v-col-stub>
        </v-row-stub>
        <v-row-stub
          class="ma-4"
          dense="false"
          density="default"
          nogutters="false"
          tag="div"
        >
          <v-col-stub
            class="text-center"
            cols="false"
            lg="false"
            md="false"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <div
              class="text-body-large font-weight-bold"
              id="days-of-week-title"
            >
              Days
            </div>
          </v-col-stub>
        </v-row-stub>
        <div
          class="mt-4 mb-4 px-1 d-flex flex-wrap"
        >
          <evocon-v-chip-stub
            active="true"
            allowgrow="false"
            class="my-1 mr-2"
            disabled="false"
            error="false"
            icon=""
            iconclass=""
            imgsrc=""
            indeterminate="false"
            label="All"
            type="primary"
          />
          
          <evocon-v-chip-stub
            active="true"
            allowgrow="false"
            class="my-1 mr-2"
            dark="false"
            disabled="false"
            error="false"
            icon=""
            iconclass=""
            imgsrc=""
            label="Mon"
            size="default"
            type="primary"
            value="MONDAY"
          />
          <evocon-v-chip-stub
            active="true"
            allowgrow="false"
            class="my-1 mr-2"
            dark="false"
            disabled="false"
            error="false"
            icon=""
            iconclass=""
            imgsrc=""
            label="Tue"
            size="default"
            type="primary"
            value="TUESDAY"
          />
          <evocon-v-chip-stub
            active="true"
            allowgrow="false"
            class="my-1 mr-2"
            dark="false"
            disabled="false"
            error="false"
            icon=""
            iconclass=""
            imgsrc=""
            label="Wed"
            size="default"
            type="primary"
            value="WEDNESDAY"
          />
          <evocon-v-chip-stub
            active="true"
            allowgrow="false"
            class="my-1 mr-2"
            dark="false"
            disabled="false"
            error="false"
            icon=""
            iconclass=""
            imgsrc=""
            label="Thu"
            size="default"
            type="primary"
            value="THURSDAY"
          />
          <evocon-v-chip-stub
            active="true"
            allowgrow="false"
            class="my-1 mr-2"
            dark="false"
            disabled="false"
            error="false"
            icon=""
            iconclass=""
            imgsrc=""
            label="Fri"
            size="default"
            type="primary"
            value="FRIDAY"
          />
          <evocon-v-chip-stub
            active="true"
            allowgrow="false"
            class="my-1 mr-2"
            dark="false"
            disabled="false"
            error="false"
            icon=""
            iconclass=""
            imgsrc=""
            label="Sat"
            size="default"
            type="primary"
            value="SATURDAY"
          />
          <evocon-v-chip-stub
            active="true"
            allowgrow="false"
            class="my-1 mr-2"
            dark="false"
            disabled="false"
            error="false"
            icon=""
            iconclass=""
            imgsrc=""
            label="Sun"
            size="default"
            type="primary"
            value="SUNDAY"
          />
          
        </div>
        <v-row-stub
          dense="false"
          density="default"
          nogutters="false"
          tag="div"
        >
          <v-col-stub
            class="px-1 mb-2"
            cols="6"
            lg="false"
            md="false"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <evocon-time-input-stub
              hint="Start time"
              id="shift-start-time"
              required=""
              rules="Start time"
              usechip="false"
              validate-on-blur=""
            />
          </v-col-stub>
          <v-col-stub
            class="px-1 mb-2"
            cols="6"
            lg="false"
            md="false"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <evocon-time-input-stub
              hint="End time"
              id="shift-end-time"
              required=""
              rules="End time"
              usechip="false"
              validate-on-blur=""
            />
          </v-col-stub>
        </v-row-stub>
      </v-form-stub>
      
    </div>
    <!--v-if-->
    <!--v-if-->
    <v-row-stub
      class="ma-4"
      data-v-4db4f123=""
      dense="false"
      density="default"
      nogutters="false"
      tag="div"
    >
      <v-col-stub
        class="text-center"
        cols="false"
        data-v-4db4f123=""
        lg="false"
        md="false"
        sm="false"
        tag="div"
        xl="false"
        xxl="false"
      >
        <div
          class="text-body-large font-weight-bold position-relative text-align-center full-width"
          data-v-4db4f123=""
          id="tertiary-title"
        >
          <span
            class="segment-title"
            data-v-4db4f123=""
          />
          <!--v-if-->
        </div>
        <div
          class="text-body-medium text-secondary-text"
          data-v-4db4f123=""
          id="tertiary-subtitle"
        />
      </v-col-stub>
    </v-row-stub>
    <div
      class="px-3"
      data-v-4db4f123=""
    >
      
      <v-expansion-panels-stub
        class="mt-4 mx-1"
        collapseicon="$collapse"
        disabled="false"
        eager="false"
        expandicon="$expand"
        flat="false"
        focusable="false"
        hideactions="false"
        mandatory="false"
        modelvalue="false"
        multiple="true"
        ripple="false"
        static="true"
        tag="div"
        tile="false"
        variant="accordion"
      >
        <expansion-panel-table-stub
          addbtndisabled="false"
          addbuttontext="No shift"
          compact="false"
          description="Set time periods when shift is not scheduled to run"
          headers="[object Object],[object Object],[object Object],[object Object],[object Object]"
          icon="M19,19H5V8H19M19,3H18V1H16V3H8V1H6V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5A2,2 0 0,0 19,3M9.31,17L11.75,14.56L14.19,17L15.25,15.94L12.81,13.5L15.25,11.06L14.19,10L11.75,12.44L9.31,10L8.25,11.06L10.69,13.5L8.25,15.94L9.31,17Z"
          items="[object Object]"
          loading="[object Object]"
          showdelete="true"
          showedit="true"
          title="'No shift' days"
        />
        <!--v-if-->
        <expansion-panel-table-stub
          addbtndisabled="false"
          addbuttontext="Auto-commenting"
          compact="false"
          description="Make downtime commenting easier for operators by adding auto-comments"
          headers="[object Object],[object Object],[object Object],[object Object]"
          icon="M5.12,14L7.5,7.67L9.87,14M6.5,5L1,19H3.25L4.37,16H10.62L11.75,19H14L8.5,5H6.5M18,17L23,11.93L21.59,10.5L19,13.1V7H17V13.1L14.41,10.5L13,11.93L18,17Z"
          items=""
          loading="false"
          showdelete="true"
          showedit="true"
          title="Downtime auto-commenting"
          warningkey="hasError"
        />
      </v-expansion-panels-stub>
      <div
        class="d-inline-flex align-center mt-6"
      >
        <multi-line-switch-stub
          disabled="false"
          helptext=""
          maintext="Template status"
          modelvalue="true"
          samelineinput="false"
        />
        <icon-with-tooltip-stub
          additionalclasses="ml-2"
          color=""
          icon="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
          iconid=""
          iconsrc=""
          size="16"
          tooltiplocation="top"
          tooltiptext="Deleting or turning off templates will not affect active shifts or historical data."
        />
      </div>
      
    </div>
    <v-card-actions-stub
      data-v-4db4f123=""
      tag="div"
    >
      
      <!--v-if-->
      <v-spacer-stub
        tag="div"
      />
      <evocon-v-button-stub
        color=""
        icon=""
        iconcolor=""
        text="Cancel"
        textclass=""
        type="secondary"
      />
      <evocon-v-button-stub
        color="primary"
        disabled="true"
        icon=""
        iconcolor=""
        id="save-btn"
        loading="false"
        text="Save"
        textclass=""
        type="primary"
      />
      
    </v-card-actions-stub>
  </v-card-stub>
</div>
`;

exports[`SettingsShiftsEdit > renders correctly if screen is not smAndUp 1`] = `
<div
  class="bg-quaternary-dark fill-height full-width"
  data-v-4db4f123=""
>
  <v-card-stub
    border="false"
    class="mx-auto mb-10 mt-10"
    data-v-4db4f123=""
    density="default"
    disabled="false"
    exact="false"
    flat="false"
    hover="false"
    loading="false"
    maxwidth="900"
    replace="false"
    ripple="true"
    tag="div"
    tile="false"
    variant="elevated"
  >
    <!--v-if-->
    
    
    <v-card-title-stub
      class="justify-center d-flex white-space-wrap text-center"
      data-v-4db4f123=""
      id="primary-title"
      tag="div"
    >
      Edit: Shift
    </v-card-title-stub>
    <!--v-if-->
    <div
      class="px-3"
      data-v-4db4f123=""
    >
      
      <v-form-stub
        disabled="false"
        fastfail="false"
        modelvalue="true"
        validateon="input"
      >
        <v-row-stub
          dense="false"
          density="default"
          nogutters="false"
          tag="div"
        >
          <v-col-stub
            class="px-1 mb-2"
            cols="12"
            lg="false"
            md="6"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <evocon-v-input-stub
              autofocus=""
              counter="200"
              filled="true"
              grow="false"
              hint="Shift name"
              id="name-input"
              maxlength="200"
              modelmodifiers="[object Object]"
              modelvalue="template 2"
              persistent-hint=""
              placeholder="Shift name"
              required=""
              rules="(v) => !!v || $setup.t('Shift name')"
              truncateinput="false"
              type="text"
              usechip="false"
              validate-on="blur"
              variant="filled"
            />
          </v-col-stub>
          <v-col-stub
            class="px-1 mb-2"
            cols="12"
            lg="false"
            md="6"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <color-selection-input-stub
              disabled="false"
              hint="Shift color"
              modelvalue=""
              removedcolors="[object Set]"
            />
          </v-col-stub>
          <v-col-stub
            class="px-1 mb-2"
            cols="12"
            lg="false"
            md="6"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <selection-input-stub
              checkbox="true"
              coloractiveprepend="false"
              disabled="false"
              disabledvalues=""
              emittoggleall="false"
              emptyequalsallselected="false"
              error="false"
              filled="true"
              groupidkey="id"
              groups=""
              groupsorderby="name"
              hiddenitemscount="0"
              hidesearch="false"
              hint="Factory"
              inverted="false"
              isgroupedselect="false"
              issingleselect="true"
              itemflag=""
              itemgroupidkey="groupId"
              items="[object Object],[object Object]"
              itemsecondarytext=""
              itemtertiarytext=""
              itemtext="name"
              itemvalue="id"
              loading="false"
              menuinputtype="primary"
              modelvalue="1"
              numericorderby="false"
              placeholder="Factory"
              prependtext=""
              removenonexistentselections="false"
              required="true"
              showemptyarrayasallselected="false"
              someselected="false"
              totalcount="0"
              usechips="false"
            />
          </v-col-stub>
          <v-col-stub
            class="px-1 mb-2"
            cols="12"
            id="station-select-column"
            lg="false"
            md="6"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <selection-input-stub
              checkbox="true"
              coloractiveprepend="false"
              disabled="false"
              disabledvalues=""
              emittoggleall="false"
              emptyequalsallselected="false"
              error="false"
              filled="true"
              groupidkey="id"
              groups="[object Object],[object Object]"
              groupsorderby="name"
              hiddenitemscount="0"
              hidesearch="false"
              hint="Stations"
              id="station-select"
              inverted="false"
              isgroupedselect="true"
              issingleselect="false"
              itemflag=""
              itemgroupidkey="groupId"
              items="[object Object],[object Object],[object Object]"
              itemsecondarytext=""
              itemtertiarytext=""
              itemtext="name"
              itemvalue="id"
              loading="false"
              menuinputtype="primary"
              modelvalue="1"
              numericorderby="false"
              placeholder="Stations"
              prependtext=""
              removenonexistentselections="true"
              required="false"
              showemptyarrayasallselected="false"
              someselected="false"
              totalcount="0"
              usechips="false"
            />
          </v-col-stub>
        </v-row-stub>
        <v-row-stub
          class="ma-4"
          dense="false"
          density="default"
          nogutters="false"
          tag="div"
        >
          <v-col-stub
            class="text-center"
            cols="false"
            lg="false"
            md="false"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <div
              class="text-body-large font-weight-bold"
              id="days-of-week-title"
            >
              Days
            </div>
          </v-col-stub>
        </v-row-stub>
        <div
          class="mt-4 mb-4 px-1 d-flex flex-wrap"
        >
          <evocon-v-chip-stub
            active="false"
            allowgrow="false"
            class="my-1 mr-2"
            disabled="false"
            error="false"
            icon=""
            iconclass=""
            imgsrc=""
            indeterminate="true"
            label="All"
            type="primary"
          />
          
          <evocon-v-chip-stub
            active="true"
            allowgrow="false"
            class="my-1 mr-2"
            dark="false"
            disabled="false"
            error="false"
            icon=""
            iconclass=""
            imgsrc=""
            label="Mon"
            size="default"
            type="primary"
            value="MONDAY"
          />
          <evocon-v-chip-stub
            active="true"
            allowgrow="false"
            class="my-1 mr-2"
            dark="false"
            disabled="false"
            error="false"
            icon=""
            iconclass=""
            imgsrc=""
            label="Tue"
            size="default"
            type="primary"
            value="TUESDAY"
          />
          <evocon-v-chip-stub
            active="true"
            allowgrow="false"
            class="my-1 mr-2"
            dark="false"
            disabled="false"
            error="false"
            icon=""
            iconclass=""
            imgsrc=""
            label="Wed"
            size="default"
            type="primary"
            value="WEDNESDAY"
          />
          <evocon-v-chip-stub
            active="false"
            allowgrow="false"
            class="my-1 mr-2"
            dark="false"
            disabled="false"
            error="false"
            icon=""
            iconclass=""
            imgsrc=""
            label="Thu"
            size="default"
            type="primary"
            value="THURSDAY"
          />
          <evocon-v-chip-stub
            active="false"
            allowgrow="false"
            class="my-1 mr-2"
            dark="false"
            disabled="false"
            error="false"
            icon=""
            iconclass=""
            imgsrc=""
            label="Fri"
            size="default"
            type="primary"
            value="FRIDAY"
          />
          <evocon-v-chip-stub
            active="false"
            allowgrow="false"
            class="my-1 mr-2"
            dark="false"
            disabled="false"
            error="false"
            icon=""
            iconclass=""
            imgsrc=""
            label="Sat"
            size="default"
            type="primary"
            value="SATURDAY"
          />
          <evocon-v-chip-stub
            active="false"
            allowgrow="false"
            class="my-1 mr-2"
            dark="false"
            disabled="false"
            error="false"
            icon=""
            iconclass=""
            imgsrc=""
            label="Sun"
            size="default"
            type="primary"
            value="SUNDAY"
          />
          
        </div>
        <v-row-stub
          dense="false"
          density="default"
          nogutters="false"
          tag="div"
        >
          <v-col-stub
            class="px-1 mb-2"
            cols="6"
            lg="false"
            md="false"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <evocon-time-input-stub
              hint="Start time"
              id="shift-start-time"
              modelvalue="12:00"
              required=""
              rules="true"
              usechip="false"
              validate-on-blur=""
            />
          </v-col-stub>
          <v-col-stub
            class="px-1 mb-2"
            cols="6"
            lg="false"
            md="false"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <evocon-time-input-stub
              hint="End time"
              id="shift-end-time"
              modelvalue="17:00"
              required=""
              rules="true"
              usechip="false"
              validate-on-blur=""
            />
          </v-col-stub>
        </v-row-stub>
      </v-form-stub>
      
    </div>
    <!--v-if-->
    <!--v-if-->
    <v-row-stub
      class="ma-4"
      data-v-4db4f123=""
      dense="false"
      density="default"
      nogutters="false"
      tag="div"
    >
      <v-col-stub
        class="text-center"
        cols="false"
        data-v-4db4f123=""
        lg="false"
        md="false"
        sm="false"
        tag="div"
        xl="false"
        xxl="false"
      >
        <div
          class="text-body-large font-weight-bold position-relative text-align-center full-width"
          data-v-4db4f123=""
          id="tertiary-title"
        >
          <span
            class="segment-title"
            data-v-4db4f123=""
          />
          <!--v-if-->
        </div>
        <div
          class="text-body-medium text-secondary-text"
          data-v-4db4f123=""
          id="tertiary-subtitle"
        />
      </v-col-stub>
    </v-row-stub>
    <div
      class="px-3"
      data-v-4db4f123=""
    >
      
      <v-expansion-panels-stub
        class="mt-4 mx-1"
        collapseicon="$collapse"
        disabled="false"
        eager="false"
        expandicon="$expand"
        flat="false"
        focusable="false"
        hideactions="false"
        mandatory="false"
        modelvalue="false"
        multiple="true"
        ripple="false"
        static="true"
        tag="div"
        tile="false"
        variant="accordion"
      >
        <expansion-panel-table-stub
          addbtndisabled="false"
          addbuttontext="No shift"
          compact="false"
          description="Set time periods when shift is not scheduled to run"
          headers="[object Object],[object Object],[object Object],[object Object],[object Object]"
          icon="M19,19H5V8H19M19,3H18V1H16V3H8V1H6V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5A2,2 0 0,0 19,3M9.31,17L11.75,14.56L14.19,17L15.25,15.94L12.81,13.5L15.25,11.06L14.19,10L11.75,12.44L9.31,10L8.25,11.06L10.69,13.5L8.25,15.94L9.31,17Z"
          items="[object Object]"
          loading="[object Object]"
          showdelete="true"
          showedit="true"
          title="'No shift' days"
        />
        <!--v-if-->
        <expansion-panel-table-stub
          addbtndisabled="false"
          addbuttontext="Auto-commenting"
          compact="false"
          description="Make downtime commenting easier for operators by adding auto-comments"
          headers="[object Object],[object Object],[object Object],[object Object]"
          icon="M5.12,14L7.5,7.67L9.87,14M6.5,5L1,19H3.25L4.37,16H10.62L11.75,19H14L8.5,5H6.5M18,17L23,11.93L21.59,10.5L19,13.1V7H17V13.1L14.41,10.5L13,11.93L18,17Z"
          items=""
          loading="false"
          showdelete="true"
          showedit="true"
          title="Downtime auto-commenting"
          warningkey="hasError"
        />
      </v-expansion-panels-stub>
      <div
        class="d-inline-flex align-center mt-6"
      >
        <multi-line-switch-stub
          disabled="false"
          helptext=""
          maintext="Template status"
          modelvalue="true"
          samelineinput="false"
        />
        <icon-with-tooltip-stub
          additionalclasses="ml-2"
          color=""
          icon="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
          iconid=""
          iconsrc=""
          size="16"
          tooltiplocation="top"
          tooltiptext="Deleting or turning off templates will not affect active shifts or historical data."
        />
      </div>
      
    </div>
    <v-card-actions-stub
      data-v-4db4f123=""
      tag="div"
    >
      
      <delete-button-stub />
      <v-spacer-stub
        tag="div"
      />
      <evocon-v-button-stub
        color=""
        icon=""
        iconcolor=""
        text="Cancel"
        textclass=""
        type="secondary"
      />
      <evocon-v-button-stub
        color="primary"
        disabled="false"
        icon=""
        iconcolor=""
        id="save-btn"
        loading="false"
        text="Save"
        textclass=""
        type="primary"
      />
      
    </v-card-actions-stub>
  </v-card-stub>
</div>
`;

exports[`SettingsShiftsEdit > renders correctly when selected shift template is not in shiftTemplatesMap 1`] = `<removed-entity-view-stub />`;
